--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ colorama==0.4.6
 deprecation==2.1.0
 exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Cors==5.0.0
 frozenlist==1.4.1
 gotrue==2.8.1
 h11==0.14.0
@@ -21,14 +22,17 @@ httpcore==1.0.5
 httpx==0.27.2
 hyperframe==6.0.1
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 multidict==6.1.0
 packaging==24.1
+pluggy==1.5.0
 postgrest==0.16.11
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 realtime==2.0.2
@@ -38,6 +42,7 @@ storage3==0.7.7
 StrEnum==0.4.15
 supabase==2.7.4
 supafunc==0.5.1
+tomli==2.0.1
 typing_extensions==4.12.2
 websockets==12.0
 Werkzeug==3.0.4
