--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -18,22 +21,8 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Check for package-lock.json
-      id: check-lock
-      run: |
-        if [ -f "package-lock.json" ]; then
-          echo "lock_exists=true" >> $GITHUB_OUTPUT
-        else
-          echo "lock_exists=false" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Install Dependencies (with package-lock.json)
-      if: steps.check-lock.outputs.lock_exists == 'true'
+    - name: Install Dependencies
       run: npm ci
-
-    - name: Install Dependencies (without package-lock.json)
-      if: steps.check-lock.outputs.lock_exists == 'false'
-      run: npm install
 
     - name: Build React App
       run: npm run build
@@ -44,6 +33,7 @@ jobs:
     - name: Run Cypress Tests
       uses: cypress-io/github-action@v5
       with:
+        working-directory: frontend
         command: npm run cypress:run
         wait-on: 'http://localhost:3000'
         browser: chrome
@@ -54,12 +44,12 @@ jobs:
       if: failure()
       with:
         name: cypress-screenshots
-        path: cypress/screenshots
+        path: frontend/cypress/screenshots
 
     - name: Upload Cypress Videos
       uses: actions/upload-artifact@v3
       if: always()
       with:
         name: cypress-videos
-        path: cypress/videos
+        path: frontend/cypress/videos
 
