--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,10 +22,17 @@ jobs:
         node-version: '18'
 
     - name: Install Dependencies
-      run: npm ci
+      run: |
+        npm ci
+        npm install --save-dev @babel/plugin-proposal-private-property-in-object
+
+    - name: Lint
+      run: npm run lint -- --max-warnings 0
 
     - name: Build React App
       run: npm run build
+      env:
+        CI: false
 
     - name: Start React App
       run: npm start & npx wait-on http://localhost:3000
