--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -39,21 +39,20 @@ jobs:
 
     - name: Run Cypress Tests
       id: cypress
-      uses: cypress-io/github-action@v5
-      with:
-        working-directory: frontend
-        command: npm run cypress:run
-        wait-on: 'http://localhost:3000'
-        browser: chrome
-        headless: true
+      run: |
+        npm run cypress:run | tee cypress-output.log
+        exit ${PIPESTATUS[0]}
 
     - name: Cypress Test Results
       if: always()
       run: |
+        echo "Cypress Test Output:"
+        cat cypress-output.log
+        
         if [ ${{ steps.cypress.outcome }} == 'success' ]; then
-          echo "Cypress tests passed successfully!"
+          echo "✅ Cypress tests passed successfully!"
         else
-          echo "Cypress tests failed. Check the test output for more details."
+          echo "❌ Cypress tests failed. Check the test output above for more details."
           exit 1
         fi
 
@@ -62,11 +61,18 @@ jobs:
       if: failure()
       with:
         name: cypress-screenshots
-        path: frontend/cypress/screenshots
+        path: cypress/screenshots
 
     - name: Upload Cypress Videos
       uses: actions/upload-artifact@v3
       if: always()
       with:
         name: cypress-videos
-        path: frontend/cypress/videos
+        path: cypress/videos
+
+    - name: Upload Cypress Output Log
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: cypress-output
+        path: cypress-output.log
