--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,67 +1,30 @@
 name: Cypress Tests
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+on: [push]
 
 jobs:
-  cypress-run:
+  install:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-    - name: Install Dependencies
-      run: |
-        npm ci
-        npm install --save-dev @babel/plugin-proposal-private-property-in-object
+      - name: Install Dependencies
+        run: |
+          npm ci
+          npm install --save-dev @babel/plugin-proposal-private-property-in-object
 
-    - name: Build React App
-      run: npm run build
-      env:
-        CI: false
-
-    - name: Start React App
-      run: npm start & npx wait-on http://localhost:3000
-
-    - name: Run Cypress Tests
-      id: cypress
-      run: |
-        npm run cypress:run | tee cypress-output.log
-        exit ${PIPESTATUS[0]}
-
-
-    - name: Upload Cypress Output Log
-      uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: cypress-output
-        path: cypress-output.log
-
-
-
-    - name: Cypress Test Results
-      if: always()
-      run: |
-        echo "Cypress Test Output:"
-        cat cypress-output.log
-        
-        if [ ${{ steps.cypress.outcome }} == 'success' ]; then
-          echo "✅ Cypress tests passed successfully!"
-        else
-          echo "❌ Cypress tests failed. Check the test output above for more details."
-          exit 1
-        fi
-
-
+      - name: Cypress run
+        uses: cypress-io/github-action@v3
+        with:
+          project: ./frontend
+          browser: chrome
+          build: npm run build
+          start: npm start
+          wait-on: "http://localhost:3000"
 
