specify frontend folder in action

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -18,7 +18,6 @@ jobs:
           cd frontend
           npm ci
           npm install --save-dev @babel/plugin-proposal-private-property-in-object
-
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with:
@@ -27,3 +26,5 @@ jobs:
           build: npm run build
           start: npm start
           wait-on: "http://localhost:3000"
+        env:
+          CI: true
