--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,9 +1,13 @@
 name: Cypress Tests
+
 on: [push]
 
 jobs:
   install:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -15,9 +19,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd frontend
           npm ci
           npm install --save-dev @babel/plugin-proposal-private-property-in-object
+
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with:
@@ -26,5 +30,4 @@ jobs:
           build: npm run build
           start: npm start
           wait-on: "http://localhost:3000"
-        env:
-          CI: true
+
