--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,5 +1,4 @@
 name: Cypress Tests
-
 on: [push]
 
 jobs:
@@ -25,9 +24,8 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v3
         with:
-          project: ./frontend
+          working-directory: frontend
           browser: chrome
           build: npm run build
           start: npm start
           wait-on: "http://localhost:3000"
-
