--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,14 +1,14 @@
 name: Cypress Tests
-
-on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'frontend/**'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'frontend/**'
+push:
+  branches: [main]
+  paths:
+    - "frontend/**"
+    - ".github/workflows/cypress.yml"
+pull_request:
+  branches: [main]
+  paths:
+    - "frontend/**"
+    - ".github/workflows/cypress.yml"
 
 jobs:
   cypress-run:
@@ -17,23 +17,22 @@ jobs:
       run:
         working-directory: frontend
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Build React app
-      run: npm run build
+      - name: Set CI environment variable
+        run: echo "CI=true" >> $GITHUB_ENV
 
-    - name: Cypress run
-      uses: cypress-io/github-action@v5
-      with:
-        working-directory: frontend
-        start: npm run cypress:run
-        wait-on: 'http://localhost:3000'
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          start: npm start
+          browser: chrome
