--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        working-directory: frontend
         with:
           start: npm start
           browser: chrome
