--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -18,22 +18,26 @@ jobs:
       run:
         working-directory: frontend
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: Install dependencies
-        run: npm ci
+    - name: Install dependencies
+      run: npm ci
 
-      - name: Set CI environment variable
-        run: echo "CI=true" >> $GITHUB_ENV
-      
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          start: npm start
-          browser: chrome
+    - name: Build React app
+      run: npm run build -- --no-eslint
+
+    - name: Cypress run
+      uses: cypress-io/github-action@v5
+      with:
+        working-directory: frontend
+        build: npm run build
+        start: npm start
+        wait-on: 'http://localhost:3000'
+
+
