cypress DISABLE_ESLINT_PLUGIN=true

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -30,7 +30,9 @@ jobs:
       run: npm ci
 
     - name: Build React app
-      run: npm run build -- --no-eslint
+      run: |
+        export DISABLE_ESLINT_PLUGIN=true
+        npm run build
 
     - name: Cypress run
       uses: cypress-io/github-action@v5
@@ -39,5 +41,3 @@ jobs:
         build: npm run build
         start: npm start
         wait-on: 'http://localhost:3000'
-
-
