--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -29,15 +29,17 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build React app
-      run: |
-        export DISABLE_ESLINT_PLUGIN=true
-        npm run build
+    # - name: Build React app
+    #   run: |
+    #     export DISABLE_ESLINT_PLUGIN=true
+    #     npm run build
 
     - name: Cypress run
       uses: cypress-io/github-action@v5
       with:
-        working-directory: frontend
-        build: npm run build
-        start: npm start
-        wait-on: 'http://localhost:3000'
+      working-directory: frontend
+      build: |
+        export DISABLE_ESLINT_PLUGIN=true
+        npm run build
+      start: npm start
+      wait-on: 'http://localhost:3000'
