cypress fix Error: Unable to locate executable file: export. Please verify either the file path exists or the file can be found within a directory specified by the PATH environment variable. Also check the file mode to verify the file is executable.

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -38,8 +38,7 @@ jobs:
       uses: cypress-io/github-action@v5
       with:
         working-directory: frontend
-        build: |
-          export DISABLE_ESLINT_PLUGIN=true
-          npm run build
+        pre-build: npm ci
+        build: npm run build
         start: npm start
         wait-on: 'http://localhost:3000'
