--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -34,9 +34,18 @@ jobs:
         export DISABLE_ESLINT_PLUGIN=true
         npm run build
 
-    - name: Cypress run
+    # - name: Run e2e tests
+    #   uses: cypress-io/github-action@v5
+    #   with:
+    #     working-directory: frontend
+    #     start: npm start
+    #     wait-on: 'http://localhost:3000'
+    #     config-file: cypress/e2e-config.json
+
+    - name: Run component tests
       uses: cypress-io/github-action@v5
       with:
         working-directory: frontend
         start: npm start
         wait-on: 'http://localhost:3000'
+        config-file: cypress/component-config.json
