--- a/.github/workflows/main_spm-g3t6-backend.yml
+++ b/.github/workflows/main_spm-g3t6-backend.yml
@@ -40,7 +40,7 @@ jobs:
         run: pytest
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./*
+        run: zip -r release.zip . -x "*.git*"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
