--- a/.github/workflows/main_spm-g3t6-backend.yml
+++ b/.github/workflows/main_spm-g3t6-backend.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
-          name: backend/python-app
-          path: release.zip
+          name: python-app
+          path: backend/release.zip
 
   deploy:
     runs-on: ubuntu-latest
