--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -48,4 +48,4 @@ jobs:
         working-directory: frontend
         start: npm start
         wait-on: 'http://localhost:3000'
-        config-file: cypress/component-config.json
+        # config-file: cypress/component-config.json
