--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -42,10 +42,10 @@ jobs:
     #     wait-on: 'http://localhost:3000'
     #     config-file: cypress/e2e-config.json
 
-    - name: Run Cypress component tests
+    - name: Run component tests
       uses: cypress-io/github-action@v5
       with:
-        browser: chrome
-        component: true
-      env:
         working-directory: frontend
+        start: npm start
+        wait-on: 'http://localhost:3000'
+        config-file: cypress/component-config.json
