use component-config

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -43,4 +43,9 @@ jobs:
     #     config-file: cypress/e2e-config.json
 
     - name: Run component tests
-      run: npm run cypress:run
+      uses: cypress-io/github-action@v5
+      with:
+        working-directory: frontend
+        start: npm start
+        wait-on: 'http://localhost:3000'
+        config-file: cypress/component-config.json
